# nexfil

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  demo.gif.REMOVED.git-id  metadata.json  nexfil.py  pyproject.toml  requirements.txt  url_store.json
.github/: FUNDING.yml
.github/workflows/: lint_python.yml
modules/: alt.py  api.py  headless.py  hide.py  method.py  output.py  printer.py  redirect.py  share.py  string.py  string_case.py  sub.py  url.py  write_log.py
src/nexfil/: alt.py  api.py  cli.py  headless.py  metadata.json  method.py  printer.py  redirect.py  string_case.py  sub.py  url.py  url_store.json  write_log.py
