[build-system]
requires = [
  "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "nexfil"
description = "OSINT tool for finding profiles by username"
license = {text = "MIT"}
authors = [
    # TODO: Add proper email
    {name="thewhiteh4t", email="thewhiteh4t@protonmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
    "tldextract",
    "requests",
    "packaging",
    "undetected_chromedriver",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "nexfil.cli.SCRIPT_V"}

[project.scripts]
nexfil = "nexfil.cli:cli"

[project.urls]
Repository = "https://github.com/thewhiteh4t/nexfil"
